# sr-model-compiler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/sr_model_compiler/: __init__.py  gen_in_out_cpp.py  gen_input_expected_data.py  gen_model_cpp.py  generate_micro_mutable_op_resolver_from_model.py  sr100_model_optimizer.py  sr_model_compiler.py  utils.py
src/sr_model_compiler/config/: sl2600_system_config.ini  sr100_system_config.ini  srw1500_system_config.ini
src/sr_model_compiler/templates/: header_template.txt  io_template.mako  micro_mutable_op_resolver.hpp.mako  tflite.cc.template
tests/: test_compiler.py  test_optimizer.py  test_vela_version.py
tests/models/uc_person_classification/: kconfig  model_vga.cc  person_classification_256x448.tflite  person_classification_448x640.tflite
tests/models/uc_person_detection/: kconfig  model_vga.cc  person_detection_256x480.tflite  person_detection_480x640.tflite
tests/models/uc_person_pose_detection/: kconfig  model_vga.cc  person_pose_detection_256x480.tflite  person_pose_detection_480x640.tflite
tests/models/uc_person_segmentation/: kconfig  model_vga.cc  person_segmentation_256x480.tflite  person_segmentation_480x640.tflite
